--- a/RLL/employee_payroll_management_system/src/app/auth/login/login.component.html
+++ b/RLL/employee_payroll_management_system/src/app/auth/login/login.component.html
@@ -7,8 +7,8 @@
             <form action="" class="mt-5 p-5">
                 <h5 class="text-primary mb-3">Login </h5>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="Username" name="username" [(ngModel)]="username">
-                    <label for="floatingInput">Email address</label>
+                    <input type="text" class="form-control" id="floatingInput" name="username" [(ngModel)]="username">
+                    <label for="floatingInput">Login</label>
                 </div>
                   <div class="form-floating mb-3">
                     <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password" [(ngModel)]="password">
